--- a/trigger.html
+++ b/trigger.html
@@ -337,7 +337,7 @@
       // 添加URL格式提示
       const urlHint = document.createElement('div');
       urlHint.className = 'status info';
-      urlHint.innerHTML = '使用提示: <br>访问此页面时请添加安全密钥: <br><code>https://karmyshunde-sudo.github.io/etf-strategy/trigger.html?secret=YOUR_SECRET</code>';
+      urlHint.innerHTML = '使用提示: <br>访问此页面时请添加安全密钥: <br><code>https://karmyshunde-sudo.github.io/etf-strategy/trigger.html?secret=TRI_HTM_TOKEN_VALUE</code>';
       document.querySelector('.container').insertBefore(urlHint, document.querySelector('.container').firstChild);
     });
   </script>
