--- a/trigger.html
+++ b/trigger.html
@@ -108,8 +108,8 @@
     </div>
     
     <div class="task">
-      <h3>测试新股申购信息 (T07)</h3>
-      <p>推送当天可申购的新股测试信息</p>
+      <h3>测试新股及新上市股票 (T07/T08)</h3>
+      <p>推送当天可申购的新股及新上市交易股票信息</p>
       <button onclick="triggerTest('test_new_stock')">触发测试</button>
       <div id="test_new_stock_status" class="status"></div>
       <div id="test_new_stock_debug" class="debug-info"></div>
