--- a/trigger.html
+++ b/trigger.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>ETF 策略测试触发器版本08131432</title>
+  <title>版本08131534 ETF 策略测试触发器</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
