--- a/trigger.html
+++ b/trigger.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>2013ETF 策略测试鱼盆触发器</title>
+  <title>2028ETF 策略测试鱼盆触发器</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
@@ -233,8 +233,9 @@
       }
       
       // 4. 构建请求 URL 和参数
-      // 修复点：移除URL中的多余空格，并将schedule改为schedule.yml
-      const apiUrl = `https://api.github.com/repos/${owner}/${repo}/actions/workflows/schedule.yml/dispatches`;
+      // 关键修复：使用 trigger 而不是 dispatches
+      const apiUrl = `https://api.github.com/repos/${owner}/${repo}/actions/workflows/schedule.yml/trigger`;
+      
       const requestData = {
         ref: 'main',
         inputs: {
